--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,9 @@ services:
       APACHE_VHOST_PRESET: php
       APACHE_DOCUMENT_ROOT: /var/www/html
     labels:
-      - traefik.http.routers.${COMPOSE_PROJECT_NAME}_web.rule=Host(`${PROJECT_BASE_URL}`)
+      traefik.enable: true
+      traefik.http.routers.traefik.rule: Host(`${PROJECT_BASE_URL}`)
+      traefik.http.routers.traefik.entrypoints: web
 
   mariadb:
     image: mariadb:${MARIADB_TAG}
@@ -47,8 +49,10 @@ services:
       - web
     environment: 
       PMA_HOST: ${COMPOSE_PROJECT_NAME}_mariadb
-    labels: 
-      - traefik.http.routers.${COMPOSE_PROJECT_NAME}_pma.rule=Host(`${PMA_URL}`)
+    labels:
+      traefik.enable: true
+      traefik.http.routers.traefik.rule: Host(`${PMA_URL}`)
+      traefik.http.routers.traefik.entrypoints: web
 
 volumes:
   db_data: {}
