[SSL update]: Now made it possible to connect to traefik using https.

--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ PHP_TAG="latest"
 
 # DATABASE
 MARIADB_TAG="latest"
-DB_USER="wordpress"
-DB_PASSWORD="wordpress"
-DB_NAME="wordpress"
+DB_USER="php"
+DB_PASSWORD="php"
+DB_NAME="php"
 DB_ROOT_PASSWORD="root"
 
 # PHPMYADMIN
 PMA_TAG="latest"
-PMA_URL="phpmyadmin.wordpress.localhost"
+PMA_URL="phpmyadmin.php.localhost"
